packages/legacy-workbench/src/css/ttyg/chat-item-details.css
:root {
    --border: 1px solid #C2C1C2;
    --assistan-icon-weight: 2.5rem;
    --assistant-container-gap: 1rem;
}

.chat-detail .assistant {
    display: flex;
    gap: var(--assistant-container-gap);
}

.chat-detail .assistant-message {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    flex-grow: 1;
    width: calc(100% - var(--assistan-icon-weight) - var(--assistant-container-gap));
}

.chat-panel .user-message .question-text .markdown-content * {
    /* Render newline characters (\n) as line breaks */
    white-space: pre-line;
    overflow-wrap: anywhere;
}

.chat-detail .assistant-message .answer {
    line-height: var(--line-height);
}

.chat-detail .assistant-message .answer img {
    max-width: 100%;
    height: auto;
    vertical-align: top;
}

.chat-detail .assistant-icon {
    width: var(--assistan-icon-weight);
    height: var(--assistan-icon-weight);
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0.625rem;
}

.chat-detail .assistant-message .hidden-actions {
    opacity: 0;
}

.chat-detail .assistant-message:hover .actions {
    opacity: 1;
}

.chat-detail .assistant-message .toggle-explain-response-icon {
    transform: rotate(180deg);
    font-size: 0.6rem;
}

.chat-detail .assistant-message .toggle-explain-response-icon.expanded {
    transform: rotate(0deg);
}

.chat-detail .assistant-message .actions {
}

.chat-detail .assistant-message markdown-content.italic .markdown-content p {
    font-style: italic;
}

.chat-detail .assistant-message .derived-answer-hint {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 0.5rem;
    margin-top: -0.5rem;
}

.chat-detail .assistant-message .deliver-answer-btn {
    padding: 0.375rem 0.75rem;
}

.chat-detail .assistant-message .explain-response-wrapper {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.chat-detail .assistant-message .explain-responses {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

/* Better handling of markdown-derived HTML inside the assistant message */
.chat-detail .assistant-message li > p:has(+:not(p, div)),
.chat-detail .assistant-message p:last-child {
    margin-bottom: 0;
}

.chat-detail .assistant-message pre {
    text-wrap: wrap;
    font-variant-ligatures: none;
}

.chat-detail .explain-response {
    display: flex;
    flex-direction: column;
}

.chat-detail .explain-response .raw-query {
    display: flex;
    gap: 0.625rem;
    margin: 0 !important;
    align-items: center;
    white-space: nowrap;
    padding: 0 1rem 1rem 1rem;
}

.chat-detail .explain-response .raw-query .label,
.chat-detail .explain-response .raw-query .copy-to-clipboard-btn {
    flex-shrink: 0;
}

.chat-detail .explain-response .raw-query .content {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.chat-detail .explain-response .label {
    color: #1E293B;
    font-weight: 400;
}

.chat-detail .explain-response .explain-call .header {
    display: flex;
    justify-content: space-between;
    background-color: #F3F3F3;
    padding: 0.25rem 0.25rem;
}

.chat-detail .explain-response .explain-call {
    border: var(--border);
}

.chat-detail .explain-response .explain-call .query {
    padding: 1rem 1rem 0 1rem;
}

.chat-detail .explain-response .error-message {
    margin: 0 1rem 1rem 1rem;
}

.chat-detail .explain-response .error-message .error-header {
    display: flex;
    gap: 0.625rem;
    align-items: center;
    white-space: nowrap;
    justify-content: space-between;
}

.chat-detail .explain-response .error-content {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    max-height: 4.5rem; /* fallback if line-clamp doesn't work */
}

.chat-detail .token-usage-info-btn {
    margin-top: 2px;
}

/*********************************************************
* Styling the popover displaying token usage information.
**********************************************************/

.token-usage-info {
    max-width: 500px;
    color: var(--text-color);
    font-size: 1rem;
    line-height: 1.7em;
    margin-top: -1.4em;
    margin-left: 0.7em;
}

.token-usage-info .description {
    font-weight: 300;
    margin-bottom: 0.3em;
    line-height: 1.2em;
}

.token-info-number {
    color: var(--gw-primary-base);
}

